[package]
name = "regview"
version = "0.1.0"
authors = ["Jan Starke <Jan.Starke@t-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# prerequisites:
# * atk
# * gtk+3
gtk = "0.9.2"
gio = "0.9.1"
glib = "0.10.3"
